fix(color): darken --super-light-blue in dark mode

--- a/src/client/styles/globalstyle.scss
+++ b/src/client/styles/globalstyle.scss
@@ -38,7 +38,7 @@ html.dark-mode {
   --card-white: #333;
   --alt-black: #f8f8f8;
   --light-blue: #000;
-  --super-light-blue: #222;
+  --super-light-blue: #111;
   --baemint: #1ed3cd;
   --red: #f55369;
   --orange: #f5772f;
